--- a/project/Project.Rmd
+++ b/project/Project.Rmd
@@ -1,13 +1,223 @@
-#Is there something different about people who hate pleasurable things?
+##Does Misery Love Categories?
 
-##Introduction
-What are the best businesses to be in when it comes to user satisfaction?
+###Introduction
+There are categories of businesses in the [Yelp! dataset](http://www.yelp.com/dataset_challenge) that may very well transcend the quality of the businesses within them. On average, the businesses within these categories enjoy very high ratings from Yelp! reviewers. Nevertheless, there are those individuals who have assigned to buisinesses within one of these **pleasure** categories at least one review that is at least 1.5 stars lower than the category's average rating. These people will heretofore be known as the **the miserables**. The inverse is also true: there are those who have assigned at least one rating at least 1.5 stars higher than the average category rating for a business in a **non-pleasure** category. They are **the joyous**.
 
-##Methods
-Describe Statistical Model(s)
+The question is: **are Yelp! reviewers who give good reviews to businesses in statistically unpleasurable categories perceived differently by the Yelp! community than those who give bad reviews in statistically pleasurable categories?** Is there a correlation between enjoying the a business in an on-average less enjoyed category and being positively perceived by others?
 
-##Results
-Present Statistical Model(s)
+```{r,echo=F}
 
-##Discussion
-Discuss why you failed to prove anything other than that people who hate pleasurable things are complimented less by their peers.
+suppressMessages(library(tm))
+dest <- 'categories_nlp_docs'
+setwd('/home/ubuntu/coursera_capstone/')
+
+# create corpus
+docs <- Corpus(DirSource(dest,pattern="tsv"));rm(dest)
+# remove numbers
+docs <- tm_map(docs, removeNumbers)
+
+# remove stop words
+docs <- tm_map(docs, removeWords, stopwords("SMART"))
+
+# make all letters lower case
+docs <- tm_map(docs, content_transformer(tolower))
+# remove numbers
+docs <- tm_map(docs, removeNumbers)
+
+# remove stop words
+docs <- tm_map(docs, removeWords, stopwords("SMART"))
+
+# make all letters lower case
+docs <- tm_map(docs, content_transformer(tolower))
+library(SnowballC)
+docs <- tm_map(docs, removePunctuation)
+docs <- tm_map(docs, stripWhitespace)
+
+docs <- tm_map(docs, stemDocument)
+
+dtm <- DocumentTermMatrix(docs)
+freq <- colSums(as.matrix(dtm))
+ord <- order(freq)
+
+
+# most frequent terms
+#freq[tail(ord,n=25)]
+dtms <- removeSparseTerms(dtm, 0.3)
+
+# make a plot of freq terms with correlation above .6
+# plot(dtms,terms =findFreqTerms(dtms, lowfreq=50))
+```
+
+```{r,echo=F,results='hide'}
+df <- data.frame(inspect(TermDocumentMatrix(docs)))
+```
+
+Here are some examples of words more commonly found in **pleasurable** categories than **unpleasurable** categories. Not surprisingly, these words are somewhat affirming -- active, life, beauty.
+
+```{r,echo=F, fig.height=1}
+suppressMessages(library(dplyr))
+df$diff <- df$joy.tsv - df$misery.tsv
+df$pct.diff <- df$diff/(df$joy.tsv + df$misery.tsv)
+df$names <- row.names(df)
+head(arrange(filter(df, misery.tsv > 0), desc(diff)))
+```
+
+It should be noted that to be considered among the **pleasure** categories, a category must include at least seven businesses and at least 30 reviews. The same is true for inclusion in the **unpleasurable** categories. And words more likely to appear in those can be found below:
+
+```{r,echo=F}
+head(arrange(filter(df, misery.tsv > 0), diff))
+# head(arrange(df, desc(joy.tsv)))
+# head(arrange(df, desc(misery.tsv)))
+
+```
+
+But when one looks at the aggregation of all feedback (total number of compliments + number of friends and fans) for all reviewers (**the joyous**, **the miserables** and **the complete reviewer population**, respectively), one can see that the distributions are far from normal. In each histogram, the mode is clearly zero and the distributions starkly skew to the left, which is suggested by the calibrations on the x-axis.
+
+```{r,echo=F}
+suppressMessages(library(ggplot2))
+library(RColorBrewer)
+g <- function(dat,dat.avgs, t = 'yests', x.label='x label') {
+  ggplot(dat, aes(x=as.numeric(cnt))) + 
+    geom_histogram(data=filter(dat,type == 'joy'),aes(y=..density..),      # Histogram with density instead of count on y-axis
+                   binwidth=.5,
+                   colour="black", fill="red", alpha=.1) +
+    geom_vline(data=filter(dat,type == 'joy'),aes(xintercept=mean(as.numeric(cnt))),   # Ignore NA values for mean
+               color=brewer.pal(8,"Set3")[4], linetype="dashed", size=2)+
+    geom_density(data=filter(dat,type == 'joy'),alpha=.4, fill=brewer.pal(11,"Spectral")[1]) +
+    geom_histogram(data=df.avgs,aes(y=..density..),      # Histogram with density instead of count on y-axis
+                   binwidth=.5,
+                   colour="pink", fill="orange", alpha=.1) +
+    geom_vline(data=df.avgs,aes(xintercept=mean(as.numeric(cnt))),   # Ignore NA values for mean
+               color=brewer.pal(8,"Set3")[7], linetype="dashed", size=2)+
+    geom_density(data=df.avgs,alpha=.4, fill=brewer.pal(11,"Spectral")[6]) +
+    geom_histogram(data=filter(dat,type == 'misery'),aes(y=..density..),      # Histogram with density instead of count on y-axis
+                    binwidth=.5,
+                    colour="orange", fill="blue", alpha=.1) +
+    geom_density(data=filter(dat,type == 'misery'),alpha=.4, fill=brewer.pal(12,"Paired")[2]) +
+    geom_vline(data=filter(dat,type == 'misery'),aes(xintercept=mean(as.numeric(cnt))),   # Ignore NA values for mean
+               color=brewer.pal(8,"Set3")[3], linetype="dashed", size=2) + theme_bw() + ggtitle(t) + xlab(x.label)
+}
+
+df.joyous.out <- read.table('../joyous.out.tsv',sep='\t',header=T,stringsAsFactors = F)
+names(df.joyous.out)[1]<-'review.cnt'
+df.miserables.out <- read.table('../miserables.out.tsv',sep='\t',header=T,stringsAsFactors = F)
+names(df.miserables.out)[1]<-'review.cnt'
+df.avgs.out <- read.table('../avgs.out.tsv',sep='\t',header=T,stringsAsFactors = F)
+names(df.avgs.out)[1]<-'review.cnt'
+
+joyous.total <- read.table('../joyous.tsv',sep='\t',stringsAsFactors = F,header=T)
+miserables.total <- read.table('../miserables.tsv',sep='\t',stringsAsFactors = F,header=T)
+avgs.total <- read.table('../avgs.tsv',sep='\t',stringsAsFactors = F,header=T)
+```
+
+```{r,echo=F}
+par(mfrow = c(2, 2)) 
+hist(joyous.total$feedback,breaks=20,col='red')
+hist(miserables.total$feedback,breaks=20, col='blue')
+hist(avgs.total$feedback,breaks=20,col=brewer.pal(12,"Paired")[2])
+par(mfrow = c(1, 1)) 
+```
+
+###Methods
+In order to compare the means of these separate populations to know for sure if the mean of different funny_compliments values is different, I would need to take advantage of the Central Limit Theorem by producing sample distributions of the sample means.
+
+So I took 2000 samples from each population 100000 times.
+
+```{r, eval=F}
+joyous.out <- replicate( 100000, mean( sample(joyous$funny_compliments, 2000) ) )
+miserables.out <- replicate( 100000, mean( sample(miserables$funny_compliments, 2000) ) )
+avgs.out <- replicate( 100000, mean( sample(avgs$funny_compliments, 2000) ) )
+```
+
+###Results
+Upon producing a normalized distribution of sample means, I can compare more clearly the mean values for people in each of the populations. The joyous are represented by the red vertical line, the miserables' mean is denoted by the blue line and the mean for the total population is marked with a green drop line.
+
+```{r,echo=F}
+joyous.out <- df.joyous.out$review.cnt
+miserables.out <- df.miserables.out$review.cnt
+avgs.out <- df.avgs.out$review.cnt
+# summary(joyous.out)
+# summary(miserables.out)
+dat <- NA
+dat <- cbind('joy', joyous.out)
+names(dat) <- c('type','cnt')
+dat2 <- NA
+dat2 <- cbind('misery', miserables.out)
+names(dat2) <- c('type', 'cnt')
+dat <- data.frame(rbind(dat,dat2), stringsAsFactors = F)
+names(dat) <- c('type','cnt')
+df.avgs <- data.frame(as.numeric(avgs.out), stringsAsFactors = F)
+names(df.avgs) <- 'cnt'
+
+plot1 <- g(dat,df.avgs, t='Review Counts',x.label='Means of Review Counts')
+
+#feedback
+joyous.out <- df.joyous.out$feedback
+miserables.out <- df.miserables.out$feedback
+avgs.out <- df.avgs.out$feedback
+dat <- NA
+dat <- cbind('joy', joyous.out)
+names(dat) <- c('type','cnt')
+dat2 <- NA
+dat2 <- cbind('misery', miserables.out)
+names(dat2) <- c('type', 'cnt')
+dat <- data.frame(rbind(dat,dat2), stringsAsFactors = F)
+names(dat) <- c('type','cnt')
+df.avgs <- data.frame(as.numeric(avgs.out), stringsAsFactors = F)
+names(df.avgs) <- 'cnt'
+
+plot2 <- g(dat,df.avgs, t='Feedback',x.label='Means of Total Feedback')
+
+#hot
+joyous.out <- df.joyous.out$hot
+miserables.out <- df.miserables.out$hot
+avgs.out <- df.avgs.out$hot
+dat <- NA
+dat <- cbind('joy', joyous.out)
+names(dat) <- c('type','cnt')
+dat2 <- NA
+dat2 <- cbind('misery', miserables.out)
+names(dat2) <- c('type', 'cnt')
+dat <- data.frame(rbind(dat,dat2), stringsAsFactors = F)
+names(dat) <- c('type','cnt')
+df.avgs <- data.frame(as.numeric(avgs.out), stringsAsFactors = F)
+names(df.avgs) <- 'cnt'
+
+plot3 <- g(dat,df.avgs,t='Hot Compliments',x.label='Means of Hot Compliments')
+
+#funny
+joyous.out <- df.joyous.out$funny
+miserables.out <- df.miserables.out$funny
+avgs.out <- df.avgs.out$funny
+dat <- NA
+dat <- cbind('joy', joyous.out)
+names(dat) <- c('type','cnt')
+dat2 <- NA
+dat2 <- cbind('misery', miserables.out)
+names(dat2) <- c('type', 'cnt')
+dat <- data.frame(rbind(dat,dat2), stringsAsFactors = F)
+names(dat) <- c('type','cnt')
+df.avgs <- data.frame(as.numeric(avgs.out), stringsAsFactors = F)
+names(df.avgs) <- 'cnt'
+
+plot4 <- g(dat,df.avgs, t='Funny Compliments',x.label='Means of Funny Compliments')
+
+suppressMessages(require(gridExtra))
+grid.arrange(plot2, plot3, plot4, ncol=2,nrow=2)
+```
+
+Using a Student's t-Test, it can be demonstrated that between each population, the population means indeed differ. And in each, case overall feedback is more positive for the joyous population.
+
+```{r,echo=F}
+t.test(as.numeric(df.joyous.out$feedback), as.numeric(df.miserables.out$feedback))
+t.test(as.numeric(df.joyous.out$hot), as.numeric(df.miserables.out$hot))
+t.test(as.numeric(df.joyous.out$funny), as.numeric(df.miserables.out$funny))
+```
+
+###Discussion
+One potential confounding variable that occurred to me is that it's possible the joyous just write more reviews than the miserables, and therefore receive more positive feedback by virture of being more active users. And though it is true (see below), both the joyous and miserables write more reviews than does the average population.
+
+```{r, echo=F}
+grid.arrange(plot1, ncol=2,nrow=2)
+```
+
